tests/spec/pass/time_after.aja
import (
    "time"
)

ch = time.after(1)
print(recv(ch))
