tests/spec/fail/http_request_wrong_arity.aja
import (
    "http"
)

print(http.request("GET"))
